--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   	<head>
-    	<title>AdminDashboard</title>
+    	<title>Project Brief</title>
 	    <%= csrf_meta_tags %>
 
 	    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
