working visitors ui

--- a/app/assets/stylesheets/lib.scss
+++ b/app/assets/stylesheets/lib.scss
@@ -4692,6 +4692,13 @@ body.mini-navbar.fixed-sidebar .logo-element {
   margin: 0 auto;
   padding-top: 40px;
 }
+.middle-box2 {
+  max-width: 50%;
+  z-index: 100;
+  margin: 0 auto;
+  padding-top: 150px;
+  color: orange;
+}
 .lockscreen.middle-box {
   width: 200px;
   padding-top: 110px;
