--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -6,3 +6,10 @@
     background: #1ab394;
     color: #000;
 }
+
+.clock_wrapper{
+    position: fixed;
+    top:20px;
+    left:20px;
+    color: #fff;
+}
