--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -9,7 +9,25 @@
 
 .clock_wrapper{
     position: fixed;
-    top:20px;
-    left:20px;
+    bottom:20px;
+    right:20px;
     color: #fff;
+}
+.floating_home{
+  position: fixed;
+  bottom:20px;
+  left:40px;
+  font-size:55px;
+  background: rgba(0, 0, 0, 0.1);
+  border-radius: 20px;
+  padding: 0 15px;
+}
+.floating_home2{
+  position: fixed;
+  bottom:20px;
+  left:130px;
+  font-size:55px;
+  background: rgba(0, 0, 0, 0.1);
+  border-radius: 20px;
+  padding: 0 15px;
 }
