--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -31,3 +31,14 @@
   border-radius: 20px;
   padding: 0 15px;
 }
+.visitor_name_wrapper{
+  height: 500px;
+  overflow: auto;
+  .name{
+    display: block;
+    background: rgba(0,0,0,0.2);
+    color: #fefefe;
+    padding:5px;
+    border-bottom: 1px solid #ccc;
+  }
+}
