--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -42,3 +42,9 @@
     border-bottom: 1px solid #ccc;
   }
 }
+.loginWrapper{
+  border:3px solid #fefefe;
+  padding:70px 20px 20px 20px;
+  margin-top:-50px;
+  border-radius:20px;
+}
