--- a/app/assets/stylesheets/receptionist.scss
+++ b/app/assets/stylesheets/receptionist.scss
@@ -48,3 +48,16 @@
 		font-size: 32px;
 	}
 }
+.logout_wrapper{
+	margin:20px;
+	width:100%;
+	height:auto;
+	.id_wrapper{
+		padding:50px 10px 10px 10px;
+		margin-top:40px;
+		height:auto;
+		width:90%;
+		background:#ccc;
+		color:#000;
+	}
+}
