--- a/app/assets/stylesheets/receptionist.scss
+++ b/app/assets/stylesheets/receptionist.scss
@@ -61,3 +61,19 @@
 		color:#000;
 	}
 }
+.home_btn2{
+	    height: 60px;
+	    width: 60px;
+	    font-size: 32px;
+	    color: #000;
+	}
+.floatingSearchWindow{
+	position: fixed;
+	top:0;
+	left:0;
+	background:#23c6c8;
+	height:auto;
+	padding:10px 10px 10px 10px;
+
+
+}
