--- a/app/assets/stylesheets/lib.scss
+++ b/app/assets/stylesheets/lib.scss
@@ -3485,7 +3485,7 @@ body {
 }
 html,
 body {
-  height: 100%;
+  // height: 100%;
 }
 body.full-height-layout #wrapper,
 body.full-height-layout #page-wrapper {
