--- a/app/assets/stylesheets/receptionist.scss
+++ b/app/assets/stylesheets/receptionist.scss
@@ -50,16 +50,8 @@
 }
 .logout_wrapper{
 	margin:20px;
-	width:100%;
 	height:auto;
-	.id_wrapper{
-		padding:50px 10px 10px 10px;
-		
-		height:auto;
-		width:90%;
-		background:#ccc;
-		color:#000;
-	}
+	color:#eee;
 }
 .home_btn2{
 	    height: 60px;
